[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basefwx"
dynamic = ["version"]
authors = [
  { name="F1xGOD", email="f1xgodim@gmail.com" },
]
description = "Take your security to the next level!"
readme = { file = "README.md", content-type = "text/markdown" }
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "cryptography>=41.0.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "pqcrypto>=0.3.4",
    # Argon2id is the default user-KDF (see Constants.USER_KDF_DEFAULT
    # in basefwx/legacy.py). Forcing argon2-cffi as a hard dependency
    # matches that default; otherwise `pip install basefwx` silently
    # downgrades password-based encryption to PBKDF2. The `[argon2]`
    # extra below is kept as a no-op for backward compatibility with
    # scripts that still write `pip install basefwx[argon2]`.
    "argon2-cffi>=23.1.0"
]

[project.optional-dependencies]
argon2 = []


[project.urls]
Homepage = "https://github.com/F1xGOD/basefwx"
Issues = "https://github.com/F1xGOD/basefwx/issues"
TermsConditions = "https://www.fixcraft.org/terms-conditions"
PrivacyPolicy = "https://www.fixcraft.org/privacy-policy"

[tool.setuptools.dynamic]
version = {attr = "basefwx._repo_version.__version__"}

[tool.setuptools.packages.find]
include = ["basefwx"]
