# BaseFWX example Python plugin — xor-rotate-py.
# SPDX-License-Identifier: MIT OR Apache-2.0
# This file is intentionally permissive so plugin authors can use it as a starting template.
#
# Install:
#   pip install -e examples/plugins/xor-rotate-py
#
# After install, the plugin is discovered via the basefwx.plugins
# entry-point group when the host calls basefwx.discover_plugins().

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "basefwx-xor-rotate-py"
version = "1.0.0"
description = "Example pure-Python BaseFWX blackbox plugin."
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [
    { name = "BaseFWX example author" },
]
requires-python = ">=3.8"

# The host package needed at runtime. Plugins compile/run against
# the public Python SPI; nothing else from basefwx is touched.
dependencies = [
    "basefwx",
]

# The line that makes this plugin auto-discoverable. After install,
# basefwx.discover_plugins() walks this group and registers the
# listed class.
[project.entry-points."basefwx.plugins"]
xor-rotate-py = "xor_rotate_py:XorRotatePy"
